k8s-manifests/deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prediction-app
  labels:
    app: prediction-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prediction-app
  template:
    metadata:
      labels:
        app: prediction-app
    spec:
      imagePullSecrets:
        - name: ecr-registry-key
      containers:
        - name: prediction-container
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com/prediction:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cache-volume
              mountPath: /root/.cache
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: prediction-cache-pvc
