k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-service
spec:
  selector:
    app: prediction-app
  ports:
  - port: 443
    targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: floods-service
spec:
  selector:
    app: floods-app
  ports:
  - port: 8080
    targetPort: 8001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: burn-scars-service
spec:
  selector:
    app: burn-scars-app
  ports:
  - port: 8081
    targetPort: 8001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: crop-classification-service
spec:
  selector:
    app: crop-classification-app
  ports:
  - port: 8082
    targetPort: 8001
  type: ClusterIP
