k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prediction-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - staging.prism.nasa-impact.net
    secretName: ingress-tls
  rules:
  - host: staging.prism.nasa-impact.net
    http:
      paths:
      - path: /api/predict
        pathType: Prefix
        backend:
          service:
            name: prediction-service
            port:
              number: 443
